<resources>
    // Tela de entrada
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_app">bilac.PetShop@gmail.com</string>

    // Tela de entrada
    <string name="btn_cliente">Cliente</string>
    <string name="btn_empresa">PetShop</string>
    <string name="app_name">Agenda Pet</string>
    <string name="menu_home">Home</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_horario_funcionamento">Horário de Funcionamento</string>
    <string name="menu_solicitacoes">Solicitações</string>
    <string name="menu_lst_servicos">Listar Serviços</string>
    <string name="menu_add_servico">Adicionar Serviço</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>

    // strings tela - Cadastro Usuario
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_senha">Esqueceu / Renovar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="logradouro">Logradouro</string>
    <string name="num_residencia">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="nome">Nome</string>
    <string name="nome_empresa">Nome Empresa</string>
    <string name="alterar">Alterar</string>
    <string name="agendar">Agendar</string>
    <string name="limpar">Limpar</string>
    <string name="excluir">Excluir</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="ver_solicitacao">Visualizar Solicitação</string>
    <string name="confirmar">Confirmar</string>
    <string name="remarcar">Remarcar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="horario_func_inicio">Das</string>
    <string name="horario_func_fim">Às</string>
    <string name="horario_func_fechado">Fechado</string>


    // Tabelas do Banco de Dados
    <string name="cliente">Cliente</string>
    <string name="pet">Pet</string>
    <string name="agendamento">Agendamento</string>
    <string name="empresa">Empresa</string>
    <string name="servico">Servico</string>
    <string name="log">Log</string>
    <string name="meu_pet">Meu Pet</string>
    <string name="raca">Raça</string>
    <string name="idade">Idade</string>

    <string name="title_activity_home_empresa">HomeEmpresaActivity</string>
    <string name="title_activity_home_emp">HomeEmpActivity</string>

    // Tela Sobre
    <string name="sobre_app">O propósito do aplicativo agenda pet desenvolvido pelo grupo de Faculdade, é facilitar, melhorar e ajudar na procura de pet shops mais proximos, com o intuito de ser uma plataforma simples e fácil de se navegar.</string>
    <string name="versao_app">Versão 2.0</string>

</resources>
