<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_emp_topo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emp_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_emp_solicitacoes"
            android:icon="@drawable/ic_agenda"
            android:title="@string/menu_solicitacoes" />
        <item
            android:id="@+id/nav_emp_historico"
            android:icon="@drawable/ic_historico"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_emp_lst_servicos"
            android:icon="@drawable/ic_lista_servicos"
            android:title="@string/menu_lst_servicos" />
        <item
            android:id="@+id/nav_emp_add_servicos"
            android:icon="@drawable/ic_servicos"
            android:title="@string/menu_add_servico" />
    </group>
    <group
        android:id="@+id/menu_emp_abaixo"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_emp_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_emp_horario_funcionamento"
            android:icon="@drawable/ic_horario_funcionamento"
            android:title="@string/menu_horario_funcionamento" />
        <item
            android:id="@+id/nav_emp_sobre"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_emp_sair"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sair" />
    </group>



</menu>
