<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cli_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cli_agendamento"
            android:icon="@drawable/ic_add_box"
            android:title="@string/agendamento" />
        <item
            android:id="@+id/nav_cli_pet"
            android:icon="@drawable/ic_pet"
            android:title="@string/meu_pet" />
        <item
            android:id="@+id/nav_cli_historico"
            android:icon="@drawable/ic_historico"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_cli_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_cli_sobre"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_cli_sair"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sair" />
    </group>


</menu>
